--- a/package.json
+++ b/package.json
@@ -7,15 +7,23 @@
     "dev": "bun --watch src/http/server.ts",
     "build": "bun build src/http/server.ts",
     "start": "NODE_ENV=production bun src/http/server.ts",
-    "test": "bun test"
+    "test": "bun test",
+    "generate": "drizzle-kit generate"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/pg": "^8.15.4",
+    "drizzle-kit": "^0.31.4",
+    "tsx": "^4.20.3"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "dependencies": {
-    "elysia": "^1.3.5"
+    "@paralleldrive/cuid2": "^2.2.2",
+    "dotenv": "^17.0.0",
+    "drizzle-orm": "^0.44.2",
+    "elysia": "^1.3.5",
+    "pg": "^8.16.3"
   }
 }
