--- a/package.json
+++ b/package.json
@@ -9,22 +9,24 @@
     "start": "NODE_ENV=production bun src/http/server.ts",
     "test": "bun test",
     "generate": "drizzle-kit generate",
-    "migrate": "drizzle-kit migrate"
+    "studio": "drizzle-kit studio",
+    "migrate": "drizzle-kit migrate",
+    "lint": "biome format --write"
   },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/pg": "^8.15.4",
+    "biome": "^0.3.3",
     "drizzle-kit": "^0.31.4",
     "tsx": "^4.20.3"
-  },
-  "peerDependencies": {
-    "typescript": "^5"
   },
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
     "dotenv": "^17.0.0",
     "drizzle-orm": "^0.44.2",
     "elysia": "^1.3.5",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "typescript": "^5.8.3",
+    "zod": "^3.25.67"
   }
 }
