--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "generate": "drizzle-kit generate",
     "studio": "drizzle-kit studio",
     "migrate": "drizzle-kit migrate",
-    "lint": "biome format --write"
+    "seed": "bun src/db/seed.ts"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.8.0",
     "@types/bun": "latest",
     "@types/pg": "^8.15.4",
     "biome": "^0.3.3",
@@ -26,6 +27,7 @@
     "drizzle-orm": "^0.44.2",
     "elysia": "^1.3.5",
     "pg": "^8.16.3",
+    "postgres": "^3.4.7",
     "typescript": "^5.8.3",
     "zod": "^3.25.67"
   }
