--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "tsx": "^4.20.3"
   },
   "dependencies": {
+    "@elysiajs/cookie": "^0.8.0",
+    "@elysiajs/jwt": "^1.3.1",
     "@paralleldrive/cuid2": "^2.2.2",
     "dotenv": "^17.0.0",
     "drizzle-orm": "^0.44.2",
