--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@elysiajs/cookie": "^0.8.0",
     "@elysiajs/jwt": "^1.3.1",
     "@paralleldrive/cuid2": "^2.2.2",
+    "dayjs": "^1.11.13",
     "dotenv": "^17.0.0",
     "drizzle-orm": "^0.44.2",
     "elysia": "^1.3.5",
